# MunsellColorReproduction

./: README.md  analysis.py  combine_hue.py  deepblue_txt_fetch.py  main.py  main_deepblue_fetch.py  main_fetch.py  main_parse_txt.py  main_plot.py  main_plotScatterDe.py  plot.py  plotScatterDe.py  plot_box_whisker.py  plot_contour.py  plot_gamut.py  plot_histogram.py  plot_munsell_hue_page.py  plot_munsell_page.py  plot_scatter.py  pyproject.toml  readICC.m
data/1929/: B.csv  BG.csv  G.csv  GY.csv  P.csv  PB.csv  R.csv  RP.csv  Y.csv  YR.csv
data/all/: B.csv  BG.csv  G.csv  GY.csv  P.csv  PB.csv  R.csv  RP.csv  Y.csv  YR.csv
data/real/: B.csv  BG.csv  G.csv  GY.csv  P.csv  PB.csv  R.csv  RP.csv  Y.csv  YR.csv
lib/: conversion.py  data_processing.py  datasets.py  error.py  munsell.py  plot.py  plotting.py  untitle.py  utilities.py
matlab/: ICC_Lab_convert_CMYK.m  ICC_plot_lab.m  ICC_plot_uvl.m  compared_gamut.m
matlab/src/: cvtColorSpaceByIccMattrc.m  plotChromaticityDiagram.m
mytest/: point.py
