[tool.poetry]
name = "munsellcolorreproduction"
version = "0.1.0"
description = ""
authors = ["Chiang Hsiao <chiang7h7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.3"
colour-science = "0.4.4"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
